force-app/main/default/objects/Flex_Integrator_Configuration__mdt/Flex_Integrator_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Flex Integrator Configuration</label>
    <pluralLabel>Flex Integrator Configurations</pluralLabel>
</CustomObject>