force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Custom_Headers_JSON__c.field-meta.xml
<CustomField>
    <fullName>Custom_Headers_JSON__c</fullName>
    <label>Custom Headers JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>