force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Default_Timeout_ms__c.field-meta.xml
<CustomField>
    <fullName>Default_Timeout_ms__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>Default Timeout ms</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>