force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Is_Async__c.field-meta.xml
<CustomField>
    <fullName>Is_Async__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Async</label>
    <type>Checkbox</type>
</CustomField>