force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Is_Log_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Log_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Log Required</label>
    <type>Checkbox</type>
</CustomField>