force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/JWT_Mode__c.field-meta.xml
<CustomField>
    <fullName>JWT_Mode__c</fullName>
    <label>JWT Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No JWT</fullName>
                <default>true</default>
                <label>No JWT</label>
            </value>
            <value>
                <fullName>Same Endpoint</fullName>
            </value>
            <value>
                <fullName>Different Endpoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>