force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/JWT_Required__c.field-meta.xml
<CustomField>
    <fullName>JWT_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JWT Required</label>
    <type>Checkbox</type>
</CustomField>