force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Named_Credential_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_API_Name__c</fullName>
    <label>Named_Credential_API_Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>