force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Relative_Path__c.field-meta.xml
<CustomField>
    <fullName>Relative_Path__c</fullName>
    <label>Relative Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>