force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Request_Body_Template__c.field-meta.xml
<CustomField>
    <fullName>Request_Body_Template__c</fullName>
    <label>Request Body Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>