force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Request_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Content_Type__c</fullName>
    <label>Request Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>application/json</fullName>
            </value>
            <value>
                <fullName>application/x-www-form-urlencoded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>