force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Response_Handling_Mode__c.field-meta.xml
<CustomField>
    <fullName>Response_Handling_Mode__c</fullName>
    <label>Response Handling Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>MAP_TO_FIELDS</fullName>
            </value>
            <value>
                <fullName>CUSTOM_APEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>