force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Response_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Response_Mapping__c</fullName>
    <label>Response Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>