force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Token_Body__c.field-meta.xml
<CustomField>
    <fullName>Token_Body__c</fullName>
    <label>Token Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>