force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Token_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Token_Named_Credential__c</fullName>
    <label>Token Named_Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>