force-app/main/default/objects/Flex_Integrator_Configuration__mdt/fields/Token_Path__c.field-meta.xml
<CustomField>
    <fullName>Token_Path__c</fullName>
    <label>Token Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>