force-app/main/default/objects/Flex_Integrator_Configuration__mdt/listViews/FIND_IT.listView-meta.xml
<ListView>
    <fullName>FIND_IT</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Service_Name__c</columns>
    <columns>JWT_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>FIND IT</label>
</ListView>